Mon Oct 26 11:19:31 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/docs/DDS for CCM FTF 22Oct09.doc:
        * connectors/dds4ccm/docs/DDS4CCM v1-0 batch5.odt:
          Latest version of the spec

Mon Oct 19 19:53:31 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/NodeApplication/NodeApplication_Impl.cpp:
          Fixed vc71 error.

Fri Oct 16 08:52:48 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/ciao_dds4ccm.doxygen:
          new doxygen file for dds4ccm

Fri Oct 16 07:43:48 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/ComponentServer/CIAO_Container_Impl.cpp:
        * ciao/ComponentServer/CIAO_ServerActivator_Impl.cpp:
        * ciao/Servants/Servant_Impl_Base.cpp:
          Small code improvements

        * ciao/ComponentServer/CIAO_ServerActivator_Impl.h:
          Doxygen changes, removed commented out namespace

        * ciao/Containers/Container_Base.h:
        * ciao/ComponentServer/Configurator_Factory.cpp
          Doxygen changes

        * ciao/Servants/Port_Activator.cpp:
        * ciao/Servants/Port_Activator.h:
        * ciao/Servants/Port_Activator.inl:
          Virtual functions shouldn't be in an inline file

        * tools/IDL3_to_IDL2/IDL3_to_IDL2.mpc:
          Fixed build error

Thu Oct 15 07:23:48 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/IDL3_to_IDL2/IDL3_to_IDL2.mpc:
        * tools/IDL3_to_XMI/IDL3_TO_XMI.mpc:
          Use tao_idl_fe

Wed Oct 14 07:54:48 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/tutorials/Quoter/Simple/01.html:
          Updated link to MPC documentation

Tue Oct 13 18:55:48 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * NEWS:

          Updated with PlanLocality.

Tue Oct 13 18:38:21 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * CIAO/DAnCE/NodeApplication/NodeApplication_Impl.cpp: